--- a/index.html
+++ b/index.html
@@ -436,24 +436,26 @@
             </li>
           </ul>
         </div>
-        <form class="footer-form">
-          <div class="footer-input-box">
-            <label for="footer-email" class="footer-label">Subscribe</label>
-            <input
-              type="email"
-              name="footer-email"
-              id="footer-email"
-              placeholder="E-mail"
-              class="footer-input"
-            />
-          </div>
-          <button type="submit" class="footer-btn">
-            Subscribe
-            <svg class="footer-soc-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-telegram"></use>
-            </svg>
-          </button>
-        </form>
+        <div class="footer-form-container">
+          <form class="footer-form">
+            <div class="footer-input-box">
+              <label for="footer-email" class="footer-label">Subscribe</label>
+              <input
+                type="email"
+                name="footer-email"
+                id="footer-email"
+                placeholder="E-mail"
+                class="footer-input"
+              />
+            </div>
+            <button type="submit" class="footer-btn">
+              Subscribe
+              <svg class="footer-soc-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -508,30 +510,30 @@
             </div>
           </div>
           <div class="modal-field">
-            <label for="modal-text" class="modal-label">Comment</label>
+            <label for="user-comment" class="modal-label">Comment</label>
             <textarea
-              name="modal-text"
-              id="modal-text"
+              name="user-comment"
+              id="user-comment"
               placeholder="Text input"
               class="modal-textarea"
             ></textarea>
           </div>
-          <div class="modal-field">
+          <div class="modal-field modal-field-chexbox">
             <input
               type="checkbox"
-              name="policy"
-              id="policy"
+              name="user-privacy"
+              id="user-privacy"
               class="input-check visually-hidden"
               value="true"
             />
-            <label for="policy" class="check-text">
-              <span>
+            <label for="user-privacy" class="check-text">
+              <span class="user-privacy-check">
                 <svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-chek"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the&nbsp;
-              <a href="">Privacy Policy</a>
+              <a class="user-privecy-link" href="">Privacy Policy</a>
             </label>
           </div>
           <button type="submit" class="modal-send-btn">Send</button>
