--- a/portfolio.html
+++ b/portfolio.html
@@ -329,24 +329,26 @@
             </li>
           </ul>
         </div>
-        <form class="footer-form">
-          <div class="footer-input-box">
-            <label for="footer-email" class="footer-label">Subscribe</label>
-            <input
-              type="email"
-              name="footer-email"
-              id="footer-email"
-              placeholder="E-mail"
-              class="footer-input"
-            />
-          </div>
-          <button type="submit" class="footer-btn">
-            Subscribe
-            <svg class="footer-soc-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-telegram"></use>
-            </svg>
-          </button>
-        </form>
+        <div class="footer-form-container">
+          <form class="footer-form">
+            <div class="footer-input-box">
+              <label for="footer-email" class="footer-label">Subscribe</label>
+              <input
+                type="email"
+                name="footer-email"
+                id="footer-email"
+                placeholder="E-mail"
+                class="footer-input"
+              />
+            </div>
+            <button type="submit" class="footer-btn">
+              Subscribe
+              <svg class="footer-soc-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
