--- a/index.html
+++ b/index.html
@@ -437,9 +437,10 @@
           </ul>
         </div>
         <div class="footer-form-container">
+          <p class="footer-form-title">Subscribe</p>
           <form class="footer-form">
             <div class="footer-input-box">
-              <label for="footer-email" class="footer-label">Subscribe</label>
+              <label for="footer-email" aria-label="footer email"></label>
               <input
                 type="email"
                 name="footer-email"
