--- a/index.html
+++ b/index.html
@@ -439,7 +439,11 @@
         <div class="footer-form-container">
           <p class="footer-form-title">Subscribe</p>
           <form class="footer-form">
-            <label for="footer-email" aria-label="footer email"></label>
+            <label
+              for="footer-email"
+              class="footer-label"
+              aria-label="footer email"
+            ></label>
             <input
               type="email"
               name="footer-email"
