--- a/index.html
+++ b/index.html
@@ -439,18 +439,15 @@
         <div class="footer-form-container">
           <p class="footer-form-title">Subscribe</p>
           <form class="footer-form">
-            <label
-              for="footer-email"
-              class="footer-label"
-              aria-label="footer email"
-            ></label>
-            <input
-              type="email"
-              name="footer-email"
-              id="footer-email"
-              placeholder="E-mail"
-              class="footer-input"
-            />
+            <label class="footer-label" aria-label="footer email">
+              <input
+                type="email"
+                name="footer-email"
+                id="footer-email"
+                placeholder="E-mail"
+                class="footer-input"
+              />
+            </label>
             <button type="submit" class="footer-btn">
               Subscribe
               <svg class="footer-soc-icon" width="24" height="24">
